# training-lens

./: .coverage.f0bb41a5fb06.190344.XhgsnrNx  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PACKAGE_STRUCTURE.md  README.md  SECURITY.md  coverage.xml  framework_config.json  pyproject.toml  pytest.ini  setup.py  test_minimal.py
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
ai_docs/: IMPLEMENTATION_NOTES.md
examples/: README.md  activation_tracking_example.py  advanced_training_example.py  analysis_example.py  basic_training_example.py  cli_workflow_example.py  custom_collector_example.py  raw_data_workflow_example.py  robust_lora_loading_example.py  scalable_framework_example.py
specs/: TECHNICAL_SPECIFICATION.md  project_specification.md
tests/: __init__.py  conftest.py  test_basic.py  test_gradient_analyzer.py
tests/ci/: README.md  __init__.py  conftest.py  run_ci_tests.py  test_checkpoint_manager_ci.py  test_collector_registry_ci.py  test_collectors_ci.py  test_config_ci.py  test_data_collectors_integration_ci.py  test_extensible_collectors_ci.py  test_unsloth_compat_ci.py  test_utils_ci.py
tests/integration/: __init__.py  test_extensible_collectors.py
tests/unit/: __init__.py  test_checkpoint_manager.py  test_collector_registry.py  test_collectors.py  test_unsloth_compat.py
training_lens/: __init__.py
training_lens/analysis/: __init__.py  activation_analyzer.py  activation_visualizer.py  checkpoint_analyzer.py  gradient_analyzer.py  reports.py  weight_analyzer.py
training_lens/analysis/activation/: __init__.py  analyzer.py  cli_analyzer.py  extractor.py  visualizer.py
training_lens/analysis/adapters/: __init__.py  lora_analyzer.py  lora_tracker.py
training_lens/analysis/core/: __init__.py  base.py
training_lens/analysis/model/: __init__.py  gradient_analyzer.py  similarity.py
training_lens/analysis/reporting/: __init__.py  loss_analysis.py  reports.py
training_lens/analysis/specialized/: __init__.py  lora_analyzer.py  loss_function.py  reports.py  weight_analyzer.py
training_lens/analysis/training/: __init__.py  checkpoint.py  convergence.py
training_lens/analyzers/: __init__.py  activation_analyzer.py  convergence_analyzer.py  lora_analyzer.py  similarity_analyzer.py
training_lens/cli/: __init__.py  activations.py  analyze.py  export.py  main.py  train.py
training_lens/collectors/: __init__.py  activations.py  adapter_gradients.py  adapter_weights.py  lora_activations.py
training_lens/config/: __init__.py  lora_config.py  training_config.py
training_lens/core/: __init__.py  base.py  collector_registry.py  integration.py  registry.py
training_lens/integrations/: __init__.py  activation_storage.py  huggingface_integration.py  storage.py  wandb_integration.py
training_lens/training/: __init__.py  checkpoint_manager.py  config.py  metrics_collector.py  metrics_collector_v2.py  wrapper.py
training_lens/utils/: __init__.py  helpers.py  io_utils.py  logging.py  lora_publishing.py  lora_utils.py  model_utils.py  pydantic_compat.py  unsloth_compat.py
