[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "training-lens"
version = "0.1.0"
description = "A LoRA-focused library for fine-tuning analysis with Unsloth integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Training Lens Contributors", email = "contact@training-lens.org"},
]
keywords = [
    "machine-learning",
    "fine-tuning",
    "lora",
    "unsloth",
    "adapter",
    "analysis",
    "monitoring",
    "transformers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "unsloth[cu121-ampere-torch220]>=2024.8",
    "wandb>=0.15.0",
    "huggingface-hub>=0.15.0",
    "datasets>=2.12.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tqdm>=4.64.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pandas-stubs>=2.0.0",
]
unsloth = [
    "unsloth[cu121-ampere-torch220]>=2024.8",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
examples = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/training-lens/training-lens"
Documentation = "https://training-lens.readthedocs.io"
Repository = "https://github.com/training-lens/training-lens"
"Bug Tracker" = "https://github.com/training-lens/training-lens/issues"

[project.scripts]
training-lens = "training_lens.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["training_lens*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=training_lens --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["training_lens"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "unsloth.*",
    "wandb.*",
    "datasets.*",
]
ignore_missing_imports = true

